--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unform-material-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Italo Izaac <italoiz.dev@gmail.com>",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -39,7 +39,8 @@
     "dev:example": "cd example && npm run start",
     "prebuild": "rimraf dist",
     "build": "rollup -c",
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
