--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unform-material-ui",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "author": "Italo Izaac <italoiz.dev@gmail.com>",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -40,7 +40,9 @@
     "prebuild": "rimraf dist",
     "build": "rollup -c",
     "test": "jest",
-    "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls"
+    "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls",
+    "lint": "npm-run-all -p lint:*",
+    "lint:lib": "eslint lib/**/*.{ts,tsx}"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -51,6 +53,7 @@
     "@rocketseat/unform": "^1.4.0",
     "@testing-library/react": "^8.0.1",
     "@types/jest": "^24.0.13",
+    "@types/lodash": "^4.14.134",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.1",
@@ -89,7 +92,7 @@
     "rollup-plugin-typescript2": "^0.21.1",
     "rollup-plugin-url": "^2.2.1",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.1",
+    "typescript": "3.4.3",
     "yup": "^0.27.0"
   },
   "peerDependencies": {
@@ -97,5 +100,8 @@
     "@rocketseat/unform": ">= 1.4.0",
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
