--- a/package.json
+++ b/package.json
@@ -1,107 +1,71 @@
 {
-  "name": "unform-material-ui",
-  "version": "0.3.1",
-  "author": "Italo Izaac <italoiz.dev@gmail.com>",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "lint-staged": {
-    "lib/**/*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "jest --bail --findRelatedTests",
-      "git add"
-    ],
-    "__tests__/**/*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
-    ],
-    "example/**/*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
+  "name": "unform-community-packages",
+  "version": "1.0.0",
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/*"
     ]
   },
+  "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all -p dev:*",
-    "dev:start": "rollup -c -w",
-    "dev:example": "cd example && npm run start",
-    "prebuild": "rimraf dist",
-    "build": "rollup -c",
+    "prebuild": "lerna exec --parallel -- rimraf dist",
+    "build": "lerna exec --parallel -- rollup -c ../../rollup.config.js",
     "test": "jest",
-    "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls",
-    "lint": "npm-run-all -p lint:*",
-    "lint:lib": "eslint lib/**/*.{ts,tsx}"
+    "coveralls": "jest && cat ./coverage/lcov.info | coveralls"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
-    "@commitlint/travis-cli": "^8.0.0",
-    "@material-ui/core": "^4.0.2",
-    "@rocketseat/unform": "^1.5.0",
-    "@testing-library/react": "^8.0.1",
-    "@types/jest": "^24.0.13",
-    "@types/lodash": "^4.14.134",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-test-renderer": "^16.8.1",
-    "@types/yup": "^0.26.14",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@babel/core": "^7.8.4",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/travis-cli": "^8.3.5",
+    "@material-ui/core": "^4.9.4",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-url": "^4.0.2",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.1",
+    "@types/jest": "^25.1.3",
+    "@types/react": "^16.9.22",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "2.15.0",
+    "@typescript-eslint/parser": "2.15.0",
+    "@unform/core": "^2.0.0",
+    "@unform/web": "^2.0.0",
     "commitlint-config-rocketseat": "^0.0.1",
-    "coveralls": "^3.0.4",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-import-resolver-typescript": "^1.1.1",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-import-helpers": "^0.1.4",
-    "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "husky": "^2.4.0",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.4.0",
-    "lint-staged": "^8.2.0",
+    "coveralls": "^3.0.9",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import-helpers": "^1.0.2",
+    "eslint-plugin-jest": "^23.8.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "jest-dom": "^4.0.0",
+    "lerna": "^3.20.2",
+    "lint-staged": "^10.0.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-test-renderer": "^16.8.6",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.14.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-terser": "^5.0.0",
-    "rollup-plugin-typescript2": "^0.21.1",
-    "rollup-plugin-url": "^2.2.1",
-    "ts-jest": "^24.0.2",
-    "typescript": "3.4.3",
-    "yup": "^0.27.0"
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.12.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^1.31.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.26.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "3.8.2"
   },
-  "peerDependencies": {
-    "@material-ui/core": ">= 4.0.2",
-    "@rocketseat/unform": ">= 1.4.0",
-    "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.11"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/italoiz/unform-community-packages.git"
   }
 }
