--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@commitlint/travis-cli": "^8.3.5",
-    "@material-ui/core": "^4.9.4",
+    "@material-ui/core": "^4.10.0",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-url": "^4.0.2",
@@ -31,8 +31,8 @@
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "2.15.0",
     "@typescript-eslint/parser": "2.15.0",
-    "@unform/core": "^2.0.0",
-    "@unform/web": "^2.0.0",
+    "@unform/core": "^2.1.0",
+    "@unform/web": "^2.1.0",
     "commitlint-config-rocketseat": "^0.0.1",
     "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
@@ -55,6 +55,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.2",
     "rollup": "^1.31.1",
