--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
+    "@testing-library/user-event": "^10.3.5",
     "@unform/web": "^2.1.0"
   }
 }
