--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prebuild": "lerna exec --parallel -- rimraf dist",
     "build": "lerna exec --parallel -- rollup -c ../../rollup.config.js",
     "test": "jest",
-    "coveralls": "jest && cat ./coverage/lcov.info | coveralls"
+    "coveralls": "jest && cat ./coverage/lcov.info | coveralls",
+    "prepublish": "yarn build"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
