--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,6 @@
 {
   "packages/**/*.{js,jsx,ts,tsx}": [
     "eslint --ext js,jsx,ts,tsx --fix",
-    "prettier --write",
-    "git add"
+    "prettier --write"
   ]
 }
