--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*",
+      "examples/*"
     ]
   },
   "license": "MIT",
@@ -24,14 +25,12 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-url": "^4.0.2",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
     "@types/jest": "^25.1.3",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "@types/react-test-renderer": "^16.9.2",
-    "@typescript-eslint/eslint-plugin": "2.15.0",
-    "@typescript-eslint/parser": "2.15.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
     "commitlint-config-rocketseat": "^0.0.1",
@@ -64,7 +63,7 @@
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript2": "^0.26.0",
     "ts-jest": "^25.2.1",
-    "typescript": "3.8.2"
+    "typescript": "^3.9.7"
   },
   "repository": {
     "type": "git",
