--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "esModuleInterop": true,
     "baseUrl": "."
   },
+  "include": ["packages/**/*"],
   "exclude": ["node_modules", "packages/**/__tests__"]
 }
