--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,12 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": ["packages/*", "examples/*"],
+  "packages": ["packages/*"],
   "version": "independent",
   "command": {
     "version": {
       "allowBranch": "master",
-      "message": "chore(release): publish",
+      "message": "chore(release): Bump version",
       "tagVersionPrefix": "v",
       "conventionalCommits": true
     }
