--- a/packages/material-ui/package.json
+++ b/packages/material-ui/package.json
@@ -21,6 +21,7 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^4.10.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@unform/core": "^2.1.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
