--- a/examples/material-ui/package.json
+++ b/examples/material-ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "react": "^16.13.1",
