--- a/examples/mui/package.json
+++ b/examples/mui/package.json
@@ -9,13 +9,16 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@mui/material":"^5.10.4",
+    "@emotion/react":"^11.10.4",
+    "@emotion/styled":"^11.10.4",
+    
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1",
-    "unform-material-ui": "file:../../packages/material-ui"
+    "unform-material-ui": "file:../../packages/mui"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
