--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -13,22 +13,24 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/italoiz/unform-community-packages.git",
-    "directory": "packages/material-ui"
+    "directory": "packages/mui"
   },
   "scripts": {
     "test": "jest",
     "build": "rollup -c ../../rollup.config.js"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.10.0",
-    "@unform/core": "^2.1.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "@mui/material":"^5.10.4",
+    "@emotion/react":"^11.10.4",
+    "@emotion/styled":"^11.10.4",
+    "@unform/core": "^2.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.1",
-    "@testing-library/react": "^10.4.7",
-    "@testing-library/user-event": "^10.3.5",
-    "@unform/web": "^2.1.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@unform/web": "^2.1.6"
   }
 }
