--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@commitlint/travis-cli": "^8.3.5",
-    "@material-ui/core": "^4.10.0",
+    "@mui/material":"^5.10.4",
+    "@emotion/react":"^11.10.4",
+    "@emotion/styled":"^11.10.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-url": "^4.0.2",
@@ -31,8 +33,8 @@
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
-    "@unform/core": "^2.1.0",
-    "@unform/web": "^2.1.0",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "commitlint-config-rocketseat": "^0.0.1",
     "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
@@ -53,10 +55,10 @@
     "lint-staged": "^10.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.1",
-    "react-test-renderer": "^16.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^18.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^1.31.1",
     "rollup-plugin-babel": "^4.3.3",
